ingress/traefik/dashboard/traefik-dashboard-ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-route
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.neeson.top`)
      kind: Rule
      services:
        - name: traefik-admin
          port: 8080
