ingress/traefik/dashboard/traefik-dashboard-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-route
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.neeson.club`)
      kind: Rule
      services:
        - name: traefik
          port: 8080
